# folia

./: CMakeLists.txt  Makefile  README.txt  configure
src/: main.cpp  tree_scene.cpp  tree_scene.h
src/actors/: plane.cpp  plane.h  pointsprites.cpp  pointsprites.h  ptree.cpp  ptree.h  solidcube.cpp  solidcube.h  tendril.cpp  tendril.h  tendrilfield.cpp  tendrilfield.h  tendriltree.cpp  tendriltree.h
src/common/: platform.h  shader.h  shaderlayout.h
src/core/: actor.cpp  actor.h  application.cpp  application.h  camera.cpp  camera.h  engine.cpp  engine.h  event.h  gbuffer.cpp  gbuffer.h  geometry.cpp  geometry.h  light.cpp  light.h  object.cpp  object.h  renderqueue.cpp  renderqueue.h  sdlapplication.cpp  sdlapplication.h  sdlwindow.cpp  sdlwindow.h  window.cpp  window.h  world.cpp  world.h  zone.cpp  zone.h
src/shaders/: halo_fs.c  passthrough_gs.c  pointsprite_gs.c  pointsprite_vs.c  ptree_blossom_fs.c  ptree_blossom_gs.c  ptree_branch_fs.c  ptree_branch_gs.c  ptree_leaf_fs.c  ptree_leaf_gs.c  ptree_vs.c  ptree_wire_gs.c  solidgeometry_fs.c  solidgeometry_vs.c  ss_light_fs.c  ss_light_vs.c  tendril_fs.c  tendril_gs.c  tendril_vs.c  test_fs.c  test_vs.c
src/utils/: platform.h  sdltextureloader.cpp  sdltextureloader.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  shadersource.cpp  shadersource.h
